[tool.poetry]
name = "doc-orc"
version = "0.1.0"
description = "Analyzing Physician Networks via Ollivier Ricci Curvature"
authors = ["jeremy.wayland <jeremy.don.wayland@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "doc_orc"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
