[tool.poetry]
name = "doc-orc"
version = "0.1.0"
description = "Analyzing Physician Networks via Ollivier Ricci Curvature"
authors = ["jeremy.wayland <jeremy.don.wayland@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "doc_orc"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
networkx = "^3.0"
pandas = "^1.5.3"
black = "^23.1.0"
dvc = "^2.45.1"
pygit2 = "^1.11.1"
dvc-ssh = "^2.21.0"
dvc-gdrive = "^2.19.1"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
